Fixed horizontal rule to hide on small devices

--- a/css/ct-paper.css
+++ b/css/ct-paper.css
@@ -1459,7 +1459,7 @@ textarea.form-control {
 .navbar-ct-primary {
   /*background-color: #8ECFD5; original*/
   /*background-color: #828282;*/
-  border-bottom: solid .5px #4F3A92;
+  /*border-bottom: solid .5px #4F3A92;*/
   min-height: 150px;
 }
 
